# cnos

./: .gitattributes  .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  ENGINEERING.md  LICENSE  OPERATOR.md  PLAN.md  README.md  RELEASE.md  ROADMAP.md  ROLES.md  RULES.md  SECURITY.md  SOUL.md  SUSTAINABILITY.md  USER-ROLE.md  USER.md  cn.json  cn_agent.opam  dune-project  go.work  install.sh  lychee.toml  package-lock.json  package.json  plan.md  setup.sh  setup_0.1.2.sh
.bumpt/: README.md  cn-sigma-scaffold-2026-05-30.md
.cdd/: CADENCE  CDD-VERSION  DISPATCH  OPERATORS  exceptions.yml  legacy-exceptions.yml  release-gate-legacy.tsv
.cdd/MCAs/: INDEX.md
.cdd/iterations/: INDEX.md  wave-2026-05-12.md  wave-2026-05-19-protocol-hygiene.md
.cdd/proposals/: gamma-iteration-after-3.61.0.md  gamma-triad-runner-design.md
.cdd/skills/: README.md
.claude/: settings.local.json
.cn-bumpt/: README.md
.cn-sigma/: README.md  cnos-peers-add-bumpt-2026-05-30.md  kappa-everyone-topic-request-20260707.md  log.md  peers.md
.cn-sigma/logs/: 20260530.md  20260531.md  20260601.md  20260602.md  20260603.md  20260604.md  20260605.md  20260606.md  20260607.md  20260608.md  20260609.md  20260610.md  20260611.md  20260612.md  20260613.md  20260614.md  20260615.md  20260616.md  20260617.md  20260618.md  20260619.md  20260620.md  20260621.md  20260622.md  20260623.md  20260624.md  20260625.md  20260626.md  20260627.md  20260628.md  20260629.md  20260630.md  20260701.md  20260702.md  20260703.md  20260704.md  20260705.md  20260706.md  20260707.md  20260708.md  (+17 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: cdd-issue.md
.github/workflows/: add-handoff-label.yml  backfill-3.82.0-binaries.yml  board-map.yml  build-verify.yml  build.yml  ci.yml  claude-test.yml  claude-wake.yml  cnos-agent-admin.yml  cnos-app-install.yml  cnos-cds-dispatch.yml  coherence.yml  go.yml  inspect-claude-test.yml  install-wake-golden.yml  oneoff-dispatch-500.yml  oneoff-publish-3822.yml  oneoff-r1-500-pre.yml  oneoff-release-3822.yml  oneoff-release-3823.yml  oneoff-release-3824.yml  oneoff-release-3825.yml  oneoff-release-3826.yml  publish-3.82.0-release.yml  rebackfill-3.82.0-macos-x64.yml  release-smoke.yml  release.yml  repoint-3.82.0.yml  republish-3.82.0-notes.yml  set-repo-description-pat.yml  set-repo-description.yml  zz-cancel-stale.yml  zz-delete-stale-branch.yml
apps/: README.md
cli/: hubConfig.js  index.js  log.js  sanitize.js
cue.mod/: module.cue
docs/: APHORISMS.md  ARCHITECTURE.md  AUTOMATION.md  CN-WHITEPAPER.md  DOJO.md  GLOSSARY.md  HANDSHAKE.md  README.md  THESIS.md
docs/_archive/: ACTOR-MODEL-DESIGN.md
docs/alpha/: AGENT-RUNTIME.md  CAA.md  CLI.md  COGNITIVE-SUBSTRATE.md  COHERENCE-SYSTEM.md  CTB-v4.0.0-VISION.md  DAEMON.md  DESIGN-CONSTRAINTS.md  FOUNDATIONS.md  HUB-PLACEMENT-MODELS.md  MANIFESTO.md  N-PASS-BIND-v3.8.0.md  PLAN-v3.7.0.md  PLAN-v3.8.0-syscall-surface.md  RUNTIME-CONTRACT-v2.md  RUNTIME-CONTRACT-v3.10.0.md  RUNTIME-EXTENSIONS.md  SCHEDULER-v3.7.0.md  SECURITY-MODEL.md  STRUCTURED-OUTPUT-v3.9.0.md  SYSCALL-SURFACE-v3.8.0.md  TRACEABILITY.md  WHITEPAPER.md
docs/architecture/: ARCHITECTURE.md  CAR.md  CELL-RUNTIME-CLASSES.md  CELL-RUNTIME.md  DESIGN-CONSTRAINTS.md  PACKAGE-SYSTEM.md  README.md  SECURITY-MODEL.md  WHITEPAPER.md
dojo/: README.md  belt-orange.md  kata-01-hello-world-intro.md  kata-09-sync-peers-and-deltas.md  kata-10-scan-incoming-needs-reply.md  kata-11-reply-loop.md  kata-13-star-peers-on-github.md
etc/: README.md
experiments/: README.md
go/: go.mod
kernel/: README.md
lib/: README.md
mindsets/: COHERENCE.md  ENGINEERING.md  FUNCTIONAL.md  OPERATIONS.md  PM.md  WISDOM.md  WRITING.md
profiles/: engineer.json  pm.json
schemas/: README.md  coherence_methodology.cue  repo_state.cue  skill-exceptions.json  skill.cue
scripts/: build-packages.sh  check-version-consistency.sh  generate-release-tag-message.sh  pre-push.sh  release.sh  stamp-versions.sh  test-generate-tag-message.sh  test-release-tag-integration.sh  test-validate-release-gate.sh  validate-release-gate.sh
skills/: README.md
spec/: AGENTS.md  EXTERNAL-SURFACE-REPLIES.md  MOLTBOOK-REPLIES.md  SOUL.md  USER-ROLE.md  USER.md  WHITEPAPER-GH-CN.md
src/cmd/: cn_activation.ml  cn_agent.ml  cn_assets.ml  cn_build.ml  cn_capabilities.ml  cn_command.ml  cn_commands.ml  cn_config.ml  cn_context.ml  cn_deps.ml  cn_doctor.ml  cn_dotenv.ml  cn_executor.ml  cn_extension.ml  cn_gtd.ml  cn_help.ml  cn_hub.ml  cn_llm.ml  cn_logs.ml  cn_mail.ml  cn_maintenance.ml  cn_orchestrator.ml  cn_output.ml  cn_placement.ml  cn_projection.ml  cn_runtime.ml  cn_runtime_contract.ml  cn_sandbox.ml  cn_shell.ml  cn_system.ml  cn_telegram.ml  cn_trace.ml  cn_trace_state.ml  cn_ulog.ml  cn_workflow.ml  dune
src/lib/: cn_json.ml  cn_lib.ml  cn_package.ml  cn_sha256.ml  dune
src/ocaml/transport/: cn_packet.ml  dune
state/: README.md  hub.md  incoming-comments.md  insights.md  neighborhood.md  peer-sync.md  peers.md  starred-peers.md
system/: README.md
test/: cli.test.js  cn.sh  cn.test.js  outbox.t  sync.t  version.t
test/cmd/: cn_activation_test.ml  cn_boot_banner_test.ml  cn_build_test.ml  cn_capabilities_test.ml  cn_cmd_test.ml  cn_command_test.ml  cn_contract_test.ml  cn_deps_test.ml  cn_dotenv_test.ml  cn_executor_test.ml  cn_extension_test.ml  cn_logs_test.ml  cn_mail_test.ml  cn_orchestrator_test.ml  cn_output_test.ml  cn_placement_test.ml  cn_projection_test.ml  cn_runtime_contract_test.ml  cn_runtime_integration_test.ml  cn_sandbox_test.ml  cn_selfpath_test.ml  cn_shell_test.ml  cn_stale_history_test.ml  cn_trace_state_test.ml  cn_trace_test.ml  cn_traceability_test.ml  cn_ulog_test.ml  cn_workflow_test.ml  dune  protocol-contract.json
test/lib/: cn_contract_pure_test.ml  cn_frontmatter_test.ml  cn_json_test.ml  cn_package_test.ml  cn_sha256_test.ml  cn_test.ml  cn_workflow_ir_test.ml  dune
threads/: README.md  YYYYMMDDHHMMSS-hello-world.md
tools/: README.md  sync-openclaw-runtime.sh  validate-skill-frontmatter.sh
tools/src/peer-sync/: README.md  dune
(+2189 files in other folders)
