; CN command modules (all share cn_ffi, cn_lib, cn_protocol)
(library
 (name cn_cmd)
 (wrapped false)
 (modules cn_fmt cn_hub cn_mail cn_gtd cn_agent cn_mca cn_placement
          cn_commands cn_system cn_config cn_llm cn_telegram cn_context
          cn_runtime cn_maintenance cn_dotenv cn_shell cn_sandbox cn_executor
          cn_orchestrator cn_indicator cn_projection cn_capabilities
          cn_assets cn_deps cn_trace cn_trace_state cn_build cn_output
          cn_runtime_contract cn_extension cn_ext_host
          cn_activation cn_workflow cn_command cn_help cn_doctor
          cn_ulog cn_logs)
 (libraries cn_ffi cn_lib cn_protocol inbox_lib git cn_io cn_packet unix))
