; cn library (pure functions, testable)
(library
 (name cn_lib)
 (wrapped false)
 (modules cn_lib cn_json cn_sha256 cn_build_info cn_version cn_repo_info)
 (libraries inbox_lib))

(rule
 (target cn_build_info.ml)
 (deps (universe))
 (action (bash "echo 'let cnos_commit = \"'$(git rev-parse --short HEAD 2>/dev/null || echo unknown)'\"' > %{target}")))

(rule
 (target cn_version.ml)
 (deps ../../VERSION)
 (action (bash "echo 'let version = \"'$(cat ../../VERSION | tr -d '\\n')'\"' > %{target}")))

(rule
 (target cn_repo_info.ml)
 (deps ../../cn.json)
 (action (bash "repo=$(sed -n 's|.*github.com/\\([^\"]*\\)\".*|\\1|p' ../../cn.json | head -1 | sed 's/\\.git$//'); if [ -z \"$repo\" ]; then echo 'Error: no GitHub repo URL found in cn.json' >&2; exit 1; fi; echo \"let repo = \\\"${repo}\\\"\" > %{target}")))
