; cn tests (ppx_expect)
(library
 (name cn_test)
 (modules cn_test)
 (libraries cn_lib)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(library
 (name cn_json_test)
 (modules cn_json_test)
 (libraries cn_lib)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; cn_sha256 tests (ppx_expect) — NIST test vectors
(library
 (name cn_sha256_test)
 (modules cn_sha256_test)
 (libraries cn_lib)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; cn_package tests (ppx_expect) — pure package manifest / lockfile /
; index types + JSON round-trips + lookup + is_first_party (#182 Move 2)
(library
 (name cn_package_test)
 (modules cn_package_test)
 (libraries cn_lib)
 (inline_tests)
 (preprocess (pps ppx_expect)))
