; git module (raw git operations, no CN semantics)
(library
 (name git)
 (modules git)
 (libraries cn_ffi))

; cn_io module (CN protocol over git)
(library
 (name cn_io)
 (modules cn_io)
 (libraries git cn_ffi))

; cn_packet module (canonical message packet schema + validation #150)
(library
 (name cn_packet)
 (modules cn_packet)
 (libraries cn_ffi cn_lib unix))

; inbox library (pure functions, used by cn_lib)
(library
 (name inbox_lib)
 (modules inbox_lib))
